# clawvm-cpp

./: .bazelrc  .clangd  .gitignore  BUILD.bazel  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  compile_commands.json
docs/: architecture.md
include/core/: page.hpp  page_policy.hpp  page_table.hpp  page_type.hpp  representation.hpp
scripts/: build.sh
src/core/: page.cpp  page_policy.cpp  page_table.cpp  page_type.cpp
tests/: page_policy_test.cpp
