load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "clawvm_core",
    srcs = glob(["src/core/**/*.cpp"]),
    hdrs = glob(["include/**/*.hpp"]),
    copts = ["-std=c++20"],
    includes = ["include"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "clawvm",
    srcs = ["src/main.cpp"],
    deps = [":clawvm_core"],
)

cc_test(
    name = "page_policy_test",
    srcs = ["tests/page_policy_test.cpp"],
    deps = [":clawvm_core"],
)

test_suite(
    name = "clawvm_tests",
    tests = [
        ":page_policy_test",
    ],
)
